Change options to title case in release-zip.yml

--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -17,8 +17,8 @@ on:
         required: true
         type: choice
         options:
-          - immediate
-          - scheduled
+          - Immediate
+          - Scheduled
       notes:
         required: false
         type: string
