Add resumeUrl input to release-zip workflow

--- a/.github/workflows/release-zip.yml
+++ b/.github/workflows/release-zip.yml
@@ -3,6 +3,9 @@ name: Create Release ZIP
 on:
   workflow_call:
     inputs:
+      resumeUrl:
+        required: true
+        type: string
       project_key:
         required: true
         type: string
@@ -30,6 +33,9 @@ on:
   # Optional: keep this if you want manual runs from GitHub UI
   workflow_dispatch:
     inputs:
+      resumeUrl:
+        required: true
+        type: string
       project_key:
         required: true
         type: string
@@ -101,3 +107,9 @@ jobs:
             *.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Resume n8n workflow
+      run: |
+        curl -X POST "${{ inputs.resumeUrl }}" \
+        -H "Content-Type: application/json" \
+        -d '{"status":"success"}'
